# Computa-o-Movel-Trabalho1

./: .gitignore  CODIGO TODO FULL REPLIT  README.md  lembrar de colocar todos os commits dos objetivos, ja ta o 1  novo.py  pyproject.toml  tasks.parquet  tasks_263049529.json  tasks_CONTA_B_FAKE.json  tasks_UTILIZADOR_TESTE_FAKE.json  tasks_local.json
pasta/: !README.md  checkbox.py  control_refs1.py  control_refs2.py  counter.py  counter_timed.py  dropdown.py  flet_windows_shutdown.py  hello_world.py  keyboard_shortcuts.py  text_button.py  to_do.py
src/: CODIGO TODO FULL REPLIT.py  TrabalhoCodigo.py  aaa4.py  codigo a funcionar no replit  codigo com deploy e tudo acho eu  codigo no replit  coisas aqui  lul.py  novo.py  sim.py  teste.py
